// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Track Views TrackScale scale snapshot matching 1`] = `
<ul
  class="range-slider__track-scale"
>
  <li
    class="range-slider__track-scale__item"
  >
    <button
      class="range-slider__track-scale__item-button"
      type="button"
    >
      first
    </button>
  </li>
  <li
    class="range-slider__track-scale__item"
  >
    <button
      class="range-slider__track-scale__item-button"
      type="button"
    >
      second
    </button>
  </li>
  <li
    class="range-slider__track-scale__item"
  >
    <button
      class="range-slider__track-scale__item-button"
      type="button"
    >
      third
    </button>
  </li>
</ul>
`;

exports[`Track Views TrackScaleItem item snapshot matching 1`] = `
<li
  class="range-slider__track-scale__item"
>
  <button
    class="range-slider__track-scale__item-button"
    type="button"
  >
    button text
  </button>
</li>
`;

exports[`Track Views TrackScaleItemButton button snapshot matching 1`] = `
<button
  class="range-slider__track-scale__item-button"
  type="button"
>
  button text
</button>
`;
